# catsay

./: Cargo.toml  cat.txt  stderr.txt
src/: main.rs
